--- a/src/main/resources/templates/invoice-created-form.html
+++ b/src/main/resources/templates/invoice-created-form.html
@@ -8,11 +8,26 @@
 
 <form th:action = "@{/invoice/create}" method = "POST" th:object=" ${invoiceForm}">                               <!-- Object specifie lidentifiant de l"object a modifié, ou on met invoice et on supprime le nom donné dans le controlleur  -->
 
-    <p>Customer name<input type="text" th:field="*{customerName}"/></p>                                  <!-- Spring MVC va utiliser le setter des proprietes pour leur attribuer une valeur -->
+    <p>Customer name: <input type="text" th:field="*{customerName}"/></p>                                  <!-- Spring MVC va utiliser le setter des proprietes pour leur attribuer une valeur -->
     <div th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}"></div>
 
-    <p>Order number<input type="text" th:field="*{orderNumber}"/></p>
+    <p>Order number: <input type="text" th:field="*{orderNumber}"/></p>
     <div th:if="${#fields.hasErrors('orderNumber')}" th:errors="*{orderNumber}"></div>
+
+    <p>Street name: <input type="text" th:field="*{streetName}"/></p>
+    <div th:if="${#fields.hasErrors('streetName')}" th:errors="*{streetName}"></div>
+
+    <p>Street number: <input type="text" th:field="*{streetNumber}"/></p>
+    <div th:if="${#fields.hasErrors('streetNumber')}" th:errors="*{streetNumber}"></div>
+
+    <p>City name: <input type="text" th:field="*{city}"/></p>
+    <div th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></div>
+
+    <p>Zip Code: <input type="text" th:field="*{zipCode}"/></p>
+    <div th:if="${#fields.hasErrors('zipCode')}" th:errors="*{zipCode}"></div>
+
+    <p>Contry: <input type="text" th:field="*{country}"/></p>
+    <div th:if="${#fields.hasErrors('country')}" th:errors="*{country}"></div>
 
     <input type="submit" value="OK">
 
